# Special_Project

./: README.md  READ_ME.md  Summary_activities  __init__.py  cases_comparison.py  data_update.py  datasets_call.py  distances_evol.py  gradient_descent.py  initial_condition.py  main.py  minimise_BFGS.py  offset_direction.py  optimised_condition.py  point_stats.py  setup.cfg  vv_shift_BFGS.py  vv_shift_CG.py
Optimiser_package/: README.md
Optimiser_package/Optimiser/: datasets_call.py  distances_evol.py  initial_condition.py  minimise_BFGS.py  offset_direction.py  optimised_condition.py  vv_shift_BFGS.py
