[metadata]
name = ProjectSpecial_Optimiser
version = 0.1
author = Gamaliel Salazar
description = This project aims to minimise distance between mulitlple arrays of 3D coordinates
long_description = The project involves data manipulation, optimisation algorithms, statics & metrics.
url = 
keywords = minimisation, 3D-coordinates, setuptools

[options]
python_requires = >=3.11
install_requires =
    numpy
	scipy
	pandas
	matplotlib